// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HoverTooltip /> should render tooltip cluster 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  padding: '10px',border-radius:'5px',color:'black',background-color:'whitesmoke',position:'absolute',min-width:'240px',max-width:'10%',width:'fit-content',block-size:'fit-content',overflow:'scroll',box-shadow:'0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22)',overflow-x:'hidden',pointer-events:'none',;
}

<body>
    <div>
      <div
        class="c0 tooltip"
        style="left: 0px; top: 0px;"
      >
        25 buildings
      </div>
    </div>
  </body>,
  "container": .c0 {
  padding: '10px',border-radius:'5px',color:'black',background-color:'whitesmoke',position:'absolute',min-width:'240px',max-width:'10%',width:'fit-content',block-size:'fit-content',overflow:'scroll',box-shadow:'0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22)',overflow-x:'hidden',pointer-events:'none',;
}

<div>
    <div
      class="c0 tooltip"
      style="left: 0px; top: 0px;"
    >
      25 buildings
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<HoverTooltip /> should render tooltip cluster with description 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  padding: '10px',border-radius:'5px',color:'black',background-color:'whitesmoke',position:'absolute',min-width:'240px',max-width:'10%',width:'fit-content',block-size:'fit-content',overflow:'scroll',box-shadow:'0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22)',overflow-x:'hidden',pointer-events:'none',;
}

<body>
    <div>
      <div
        class="c0 tooltip"
        style="left: 0px; top: 0px;"
      >
        <div>
          name
           (description)
        </div>
      </div>
    </div>
  </body>,
  "container": .c0 {
  padding: '10px',border-radius:'5px',color:'black',background-color:'whitesmoke',position:'absolute',min-width:'240px',max-width:'10%',width:'fit-content',block-size:'fit-content',overflow:'scroll',box-shadow:'0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22)',overflow-x:'hidden',pointer-events:'none',;
}

<div>
    <div
      class="c0 tooltip"
      style="left: 0px; top: 0px;"
    >
      <div>
        name
         (description)
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<HoverTooltip /> should render tooltip cluster without description 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  padding: '10px',border-radius:'5px',color:'black',background-color:'whitesmoke',position:'absolute',min-width:'240px',max-width:'10%',width:'fit-content',block-size:'fit-content',overflow:'scroll',box-shadow:'0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22)',overflow-x:'hidden',pointer-events:'none',;
}

<body>
    <div>
      <div
        class="c0 tooltip"
        style="left: 0px; top: 0px;"
      >
        <div>
          name
          
        </div>
      </div>
    </div>
  </body>,
  "container": .c0 {
  padding: '10px',border-radius:'5px',color:'black',background-color:'whitesmoke',position:'absolute',min-width:'240px',max-width:'10%',width:'fit-content',block-size:'fit-content',overflow:'scroll',box-shadow:'0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22)',overflow-x:'hidden',pointer-events:'none',;
}

<div>
    <div
      class="c0 tooltip"
      style="left: 0px; top: 0px;"
    >
      <div>
        name
        
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
